--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,144 +1,214 @@
-/* .wa-date{
-  background: darkgoldenrod;
-  flex: 1;
-  font-size: calc(18px + 5vmin);
-  text-align: center;
-  padding: 20px 40px;
-  border-radius: 10px;
-  box-shadow: 0px 2px 4px black;
-}
-
-.wa-clock{margin-bottom: 0;font-weight: bolder;}
-.wa-day{margin:10px;}
-.wa-weekday{margin-top: 0;} */
-
-.wa-home-wrapper {
-  width: 100%;
-
-  display: grid;
-  grid-template-areas: 'left right';
-}
-.wa-date-wrapper {
-  grid-area: left;
-  border-right: 1px solid black;
-}
-.wa-menu-wrapper {
-  grid: right;
-  border-left: 1px solid black;
-}
-.wa-menu-wrapper,
-.wa-date-wrapper {
+.wa-main {
   display: flex;
-  justify-content: center;
+  flex-flow: column;
+  justify-content: space-around;
   align-items: center;
-}
-/* .wa-date {
-  background: burlywood;
-}
-.wa-menu {
-  background: brown;
-} */
-.wa-date,
-.wa-menu {
-  font-size: calc(16px + 5vmin);
-  text-align: center;
-}
-.wa-clock {
-  margin-bottom: 0;
-  font-weight: bolder;
-}
-.wa-day {
-  margin: 10px;
-}
-.wa-weekday {
-  margin-top: 0;
-}
-
-@media screen and (max-width: 768px) {
-  .wa-menu-wrapper {
-    display: none;
-  }
-  .wa-menu-mobile-wrapper {
-    position: absolute;
-    display: block;
-    border-left: none;
-  }
-  .wa-date-wrapper {
-    border-right: none;
-  }
-  .wa-home-wrapper {
-    display: flex;
-    justify-content: center;
-  }
-}
-
-#wa-alarm-icon,
-#wa-stopwatch-icon,
-#wa-countdown-icon {
-  width: 100px;
-  height: auto;
-}
-.wa-menu {
+  background: linear-gradient(
+    120deg,
+    #8ed6ff 20%,
+    rgba(218, 248, 255, 0.75) 40%,
+    #ffffff 100%
+  );
+  height: 100vh;
   position: relative;
-  background: #0e232e;
-  border-radius: 50%;
-  width: 250px;
-  height: 250px;
+
+  z-index: 2;
 }
-#wa-alarm-icon {
-  position: absolute;
-  top: 20px;
-  left: -40px;
+.wa-title {
+  font-family: 'Mitr', sans-serif;
+  font-size: calc(14px + 2vmin);
 }
-#wa-stopwatch-icon {
-  position: absolute;
-  top: 60px;
-  right: -40px;
-}
-#wa-countdown-icon {
-  position: absolute;
-  left: 80px;
-  bottom: -40px;
-}
-#wa-alarm-icon:hover,
-#wa-stopwatch-icon:hover,
-#wa-countdown-icon:hover {
-  transform: scale(1.5);
-  transition: all 0.3s ease-in-out;
-}
-.wa-menu-btn {
-  background: #dc143c;
-  border-radius: 50%;
-  position: absolute;
-  bottom: 50px;
-  width: 75px;
-  height: 75px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.wa-menu-btn > button {
-  background: none;
-  border: none;
-  outline: none;
-  font-size: 25px;
-  color: #fff;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
+.wa-title h1 {
   margin: 0;
-  padding: 0;
 }
-.wa-menu-btn > button:hover {
-  background: #a3122f;
+.wa-bg-wrapper {
+  position: relative;
+  z-index: 8;
+}
+#bg-clock {
+  width: 90vmin;
+  opacity: 1;
+  max-width: 460px;
+  z-index: 8;
+}
+.wa-alarm-icon,
+.wa-countdown-icon,
+.wa-stopwatch-icon {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  width: 16vmin;
+  max-width: 80px;
+  height: auto;
+  z-index: -1;
   transition: all 0.4s ease-in;
 }
-@media screen and (min-width: 768px) {
-  .wa-menu-btn {
-    display: none;
-  }
+.wa-alarm-icon svg,
+.wa-countdown-icon svg,
+.wa-stopwatch-icon svg {
+  width: 16vmin;
+  max-width: 80px;
+  height: auto;
+}
+.wa-alarm-icon--open {
+  transform: translate(0%, 0%);
+  top: 80%;
+  left: 0;
 }
 
-.cls-1{
-  background: red;
+.wa-countdown-icon--open {
+  top: 110%;
+}
+.wa-stopwatch-icon--open {
+  transform: translate(-100%);
+  top: 80%;
+  left: 100%;
+}
+
+.wa-btn-wrapper > button {
+  border: none;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.line {
+  transform-origin: center;
+  display: block;
+  width: 2px;
+  height: 80%;
+  background-color: #fff;
+  transition: all .5s ease;
+}
+.line-1{
+  transform: rotate(90deg);
+}
+.line-2{
+  margin-right: 1px;
+}
+button:hover .line-1 {
+  transform: rotate(450deg);
+}
+button:hover .line-2 {
+  transform: rotate(180deg);
+}
+button:active .line-1{
+  transform: rotate(180deg);
+}
+button:active .line-2 {
+  transform: rotate(450deg);
+}
+.wa-nav {
+  display: none;
+}
+.wa-nav ul {
+  margin: 0;
+  padding: 0 40px;
+  list-style: none;
+}
+.wa-nav ul li {
+  margin: 10px 0;
+  padding: 0;
+}
+.wa-nav ul li svg {
+  max-width: 100px;
+}
+.wa-nav ul li:hover svg {
+  transform: scale(120%,120%);
+  z-index: 999;
+}
+#alarmEar {
+  animation: ear 240ms infinite;
+}
+#stopwatchEar{
+  transform-origin: center;
+  animation: swEar 240ms infinite;
+}
+@keyframes swEar {
+  0%{
+    transform:rotate(0deg);
+  }
+  100%{transform: rotate(10deg);}
+}
+#countdownArrow{
+  transform-origin: center;
+  animation: cdArrow 2s infinite linear;
+}
+@keyframes cdArrow {
+  0%{transform: rotate(0deg);}
+  100%{transform: rotate(360deg);}
+}
+@keyframes ear {
+  0%{
+    transform: scale(100%,100%);
+  }
+  100%{transform: scale(100%,80%);}
+}
+
+.wa-br{
+  display: none;
+}
+
+#clockPanel{
+  position: relative;
+}
+#clockLine{
+  border: 4px solid black;
+  fill: darkgreen;
+  transform-origin: center; 
+  animation: clock 36000ms linear infinite;
+}
+
+@keyframes clock{
+  0% {
+    fill: darkred;
+    transform: rotate(0deg);
+  }
+  100% {
+    fill: goldenrod;
+    transform: rotate(360deg);
+  }
+
+}
+@media screen and (min-width: 769px) {
+  .wa-br{
+    display: block;
+  }
+  .wa-main {
+    flex-flow: row nowrap;
+    justify-content: start;
+  }
+  .wa-title {
+    margin-right: auto;
+    padding: 0 40px;
+  }
+  .wa-nav {
+    display: block;
+  }
+
+  .wa-alarm-icon,
+  .wa-countdown-icon,
+  .wa-stopwatch-icon,
+  .wa-btn-wrapper {
+    display: none;
+  }
+
+  .wa-bg-wrapper {
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border: none;
+    z-index: -1;
+    width: 50%;
+  }
+
+  #bg-clock {
+    width: 100%;
+    opacity: 1;
+    max-width: none;
+  }
 }
