--- a/src/components/alarm/Alarm.css
+++ b/src/components/alarm/Alarm.css
@@ -1,75 +1,70 @@
-.wa-alarm-wrapper{
+.wa-alarm-wrapper {
   width: 100%;
   min-height: 100vh;
-}
-.wa-alarm-current-time{
-  text-align: center;
-  font-size: calc(16px + 5vmin);
-}
-.wa-alarm-set > select,span{
-  font-size: calc(16px + 5vmin);
-}
-.wa-alarm-set > select{
-  background: none;
-  border: none;
-}
-.wa-alarm-box{
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: center;
-  background: rgb(43, 182, 201);
-}
-.wa-alarm-stop > button{
-  width: 50%;
-  margin-top: 50px;
+  position: relative;
 }
 
-.wa-alarm-setter{
-  display: flex;
-  flex-flow: column nowrap;
-  align-items: center;
-}
-.wa-alarm-setter input{
-  width: 80px;
-  height: 80px;
-  background: none;
-  border: none;
+.wa-alarm-title {
+  margin: 0;
+  padding: 1rem;
+  color: #0E263D;
+  font-family: 'Roboto','sans-serif';
   font-size: 4rem;
-  text-align: center;
-  outline: none;
 }
-.wa-alarm-box span{
-  font-size: 5rem;
+
+.wa-set-alarm select {
+  font-size: 1.5rem;
+  border-radius: 5px;
+  padding: 0.2rem;
+  position: relative;
+  z-index: 12;
 }
-.wa-set-hour{
+
+/* Alarm Container Glass Effect*/
+.wa-alarm-box {
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.2);
+  background: inherit;
+  width: max-content;
+  padding: 1rem;
+  border-radius: 5px;
+  width: 400px;
+  height: min-content;
+  position: relative;
+  margin: 1rem;
   display: flex;
-  flex-flow: column nowrap;
-}
-.wa-set-hour i{
-  border: 1px solid red;
-  background: aquamarine;
-}
-.chevron-up{
-  transform: rotate(180deg);
-}
-.chevron-down,.chevron-up{
-  cursor: pointer;
-  width: 100px;
-  height: 100px;
-  display: flex;
-  justify-content: center;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
   align-items: center;
 }
-.wa-chevron-svg{
-  width: 100%;
-  height: 100%;
+.wa-alarm-box::before {
+  content: '';
+  position: absolute;
+  background: inherit;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, 0.5);
+  filter: blur(10px);
 }
-.wa-chevron-svg:active{
-  width: 95%;
-  height: 95%;
+
+/* Alarm Container Glass Effect*/
+.wa-alarms-container {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  padding: 1rem;
 }
-.wa-arrow-box{
-  width: 100px;
-  height: 100px;
+@media screen and (min-width: 895px) {
+  .wa-alarms-container {
+    justify-content: flex-start;
+  }
+}
+#cb-alarm {
+  position: relative;
+  z-index: 10;
+}
+.wa-twodots {
+  font-size: 2rem;
+  font-weight: 900;
 }
