--- a/src/components/stopwatch/Stopwatch.css
+++ b/src/components/stopwatch/Stopwatch.css
@@ -10,10 +10,10 @@ button{
 
   
 }
-button:hover{
+/* button:hover{
   background-color: rgb(102, 131, 218);
   transition: .3s ease-in all;
-}
+} */
 .wa-btns {
   width: 100%;
   display: flex;
