--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,12 @@ body {
   margin: 0;
   padding: 0;
 }
+/* HEader Fonts*/
+h1,h2,h3,
+h4,h5,h6{
+  font-family: 'Saira Stencil One', cursive;
+  font-weight: normal;
+}
 
 /*********************Button Styles******************/
 
