--- a/src/components/countdown/Countdown.css
+++ b/src/components/countdown/Countdown.css
@@ -53,3 +53,28 @@
 }
 .wa-count > p{
 }
+
+.wa-countdown-top{
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+  padding-bottom: 0;
+  font-size: 2rem;
+  position: relative;
+}
+#userCount{
+ background: none;
+ border-bottom: 1px solid #10617774;
+ border-radius: 0;
+ width: 200px; 
+ outline: none;
+ margin-bottom: 2rem;
+}
+#userCount:focus{
+  outline: none;
+  border: none;
+  border-bottom: 1px solid #10617774;
+}
+.wa-user-input label{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
