--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -34,36 +34,48 @@
   width: 16vmin;
   max-width: 80px;
   height: auto;
-  z-index: -1;
+  z-index: 1;
   transition: all 0.4s ease-in;
 }
 .wa-alarm-icon svg,
 .wa-countdown-icon svg,
 .wa-stopwatch-icon svg {
-  width: 16vmin;
+  width: 10vmin;
   max-width: 80px;
   height: auto;
+}
+.wa-alarm-icon,
+.wa-countdown-icon,
+.wa-stopwatch-icon{
+  opacity: 0;
+  pointer-events: none;
 }
 .wa-alarm-icon--open {
   transform: translate(0%, 0%);
   top: 80%;
   left: 0;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .wa-countdown-icon--open {
   top: 110%;
+  opacity: 1;
+  pointer-events: all;
 }
 .wa-stopwatch-icon--open {
   transform: translate(-100%);
   top: 80%;
   left: 100%;
+  opacity: 1;
+  pointer-events: all;
 }
 
 .wa-btn-wrapper > button {
   border: none;
   border-radius: 50%;
-  width: 80px;
-  height: 80px;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
