--- a/src/components/stopwatch/Stopwatch.css
+++ b/src/components/stopwatch/Stopwatch.css
@@ -54,7 +54,7 @@ h1 {
 .wa-right-panel{
   min-width: 20%;
   background: #0E263D;
-  font-family:'Saira Stencil One', cursive;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight:normal;
 }
 
