--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,8 @@ body {
 /* HEader Fonts*/
 h1,h2,h3,
 h4,h5,h6{
-  font-family: 'Saira Stencil One', cursive;
-  font-weight: normal;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
 }
 .wa-pages-title {
   margin: 0;
